--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
 
-.card{
-    background-color: greenyellow;
-                margin: 20px;
-                padding: 20px;
-                border: 2px solid
-                }
+body{
+    padding:0;
+    margin:0;
+}
+*{
+    box-sizing: border-box;
+}
+.navigation{
+overflow: auto;
+}
+[class*="col-"]{
+    float:left;
+    padding: 15px;
 
-            body{
-                background-color: aquamarine
-            }
+}
+.col-1{
+width:8.33%;
+}
+.col-8{
+    width:66.66%;
+
+}
+.col-4{
+    width:32.32%;
+}
+.link-item{
+    float:left;
+    padding:5px;
+}
