--- a/style.css
+++ b/style.css
@@ -2,12 +2,45 @@
 body{
     padding:0;
     margin:0;
+    font-family: sans-serif;
 }
+a{
+    text-decoration: none;
+    color:#fff;
+}
+
 *{
     box-sizing: border-box;
 }
 .navigation{
 overflow: auto;
+}
+.btn{
+    color:black;
+    padding: 15px;
+    background-color:#fff;
+    font-weight: bold;
+    box-shadow: 0px 2px 10px,#3535;
+    border-radius:50px;
+    transition:all  ease-in-out 0.5s;
+
+
+}
+.btn:hover{
+
+    padding-left:30px;
+    padding-right:30px;
+    color:#fff;
+    background-color:rgb(255,136,0);
+}
+.banner{
+   /* background-image: url('./banner_croped.jpg');*/
+   background-size:cover;
+   background-image:linear-gradient(to top,rgba(133,133,173,0.5),rgba(133,133,173,0.5),rgba(53,53,212,0.5),black),url('./banner_croped.jpg');
+    color:#fff;
+}
+.banner-body{
+    padding:10%;
 }
 [class*="col-"]{
     float:left;
